2010-04-29  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2010-04-06  kitone  <kitone@gna.org>

	* NEWS:
	* README:
	* configure.in:
	Preparing 0.36.2 release.

2010-04-06  kitone  <kitone@gna.org>

	* configure.in:
	* plugins/subtitleformats/Makefile.am:
	* plugins/subtitleformats/sbv/Makefile.am:
	* plugins/subtitleformats/sbv/sbv.cc:
	* plugins/subtitleformats/sbv/sbv.se-plugin.in:
	Introduce new subtitle format: SBV.

2010-04-01  kitone  <kitone@gna.org>

	* plugins/actions/changeframerate/dialog-change-framerate.ui:
	Fix HIG.

2010-03-30  kitone  <kitone@gna.org>

	* plugins/actions/keyframesmanagement/keyframesmanagement.cc:
	* plugins/actions/typewriter/typewriter.cc:
	Fix typo.

2010-03-26  kitone  <kitone@gna.org>

	* README:
	Update.

2010-03-22  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2010-03-22  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.36.1 release.

2010-03-21  kitone  <kitone@gna.org>

	* plugins/actions/wavefrommanagement/waveformmanagement.cc:
	Update ui only if needed.

2010-03-21  kitone  <kitone@gna.org>

	* src/player.cc:
	* src/player.h:
	* src/vp/gstplayer.cc:
	* src/vp/gstplayer.h:
	* src/vp/videoplayer.cc:
	* src/vp/videoplayer.h:
	Improvement of the player to work with messages.

	* plugins/actions/keyframesmanagement/keyframesmanagement.cc:
	* plugins/actions/timingfromplayer/timingfromplayer.cc:
	* plugins/actions/videoplayermanagement/videoplayermanagement.cc:
	* plugins/actions/wavefrommanagement/waveformmanagement.cc:
	* src/we/waveformeditor.cc:
	* src/we/waveformeditor.h:
	Updated to work with the messages of the player.

2010-03-12  kitone  <kitone@gna.org>

	* src/we/waveformrenderercairo.cc:
	Fix bug #15464 : segfault on waveform generation. 
	Avoid segfault in waveformrenderercairo.

2010-03-12  kitone  <kitone@gna.org>

	* src/we/waveformeditor.cc:
	Improve dbg msg.

2010-03-03  kitone  <kitone@gna.org>
